# imediaplayer

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  imediaplayer.pro
src/core/: CMakeLists.txt  icorelib.pro
src/core/codecs/: codecs.pri  itextcodec_p.h  iunicodetables_data.cpp  iunicodetables_data.h  iunicodetables_p.h  iutfcodec.cpp  iutfcodec_p.h
src/core/global/: global.pri  iendian.cpp  iendian_p.h  iglobal.cpp  imacro.cpp  inumeric.cpp  inumeric_p.h
src/core/inc/: iincconnection.cpp  iinccontext.cpp  iinccontextconfig.cpp  iincdevice.cpp  iincdevice.h  iincengine.cpp  iincengine.h  iincerror.cpp  iinchandshake.cpp  iinchandshake.h  iincmessage.cpp  iincmetrics.h  iincoperation.cpp  iincprotocol.cpp  iincprotocol.h  iincrouter.cpp  iincserver.cpp  iincserverconfig.cpp  iincstream.cpp  iinctagstruct.cpp  irtp.cpp  irtp.h  irtpclientdevice.cpp  irtpclientdevice.h  irtpdevice.cpp  irtpdevice.h  itcpdevice.cpp  itcpdevice.h  iudpclientdevice.cpp  iudpclientdevice.h  iudpdevice.cpp  iudpdevice.h  iunixdevice.cpp  iunixdevice.h
src/core/io/: iiodevice.cpp  iiodevice_p.h  iipaddress.cpp  iipaddress_p.h  ilog.cpp  imemblock.cpp  imemblockq.cpp  imemchunk.cpp  imemchunk.h  imemtrap.cpp  io.pri  isharemem.cpp  iurl.cpp  iurl_p.h  iurlidna.cpp  iurlrecode.cpp
src/core/kernel/: icoreapplication.cpp  icoreposix.cpp  icoreposix.h  ideadlinetimer.cpp  ievent.cpp  ieventdispatcher.cpp  ieventloop.cpp  ieventsource.cpp  imath.cpp  iobject.cpp  ipoll.cpp  itimer.cpp  itimerinfo.cpp  itimerinfo.h  ivariant.cpp  kernel.pri
src/core/private/: ibasicatomicbitfield.h  ibytearraymatcher.cpp  ibytearraymatcher.h  icoreposix.cpp  icoreposix.h  iendian_p.h  ieventdispatcher_generic.cpp  ieventdispatcher_generic.h  ieventdispatcher_glib.cpp  ieventdispatcher_glib.h  ilocale_data_p.h  ilocale_p.h  ilocale_tools_p.cpp  ilocale_tools_p.h  inumeric_p.h  istringalgorithms_p.h  istringiterator_p.h  istringmatcher.cpp  istringmatcher.h  itextcodec_p.h  ithread_p.h  itimerinfo.cpp  itimerinfo.h  itools_p.h  iunicodetables_data.cpp  iunicodetables_data.h  iunicodetables_p.h  iutfcodec.cpp  iutfcodec_p.h  private.pri
src/core/thread/: iaupdate.cpp  icacheallocator.h  icondition.cpp  ieventdispatcher_generic.cpp  ieventdispatcher_generic.h  ieventdispatcher_glib.cpp  ieventdispatcher_glib.h  imutex.cpp  iorderedmutexlocker_p.h  isemaphore.cpp  ithread.cpp  ithread_c11.cpp  ithread_p.h  ithread_posix.cpp  ithread_win.cpp  ithreadstorage.cpp  iwakeup.cpp  thread.pri
src/core/utils/: iarraydata.cpp  ibasicatomicbitfield.h  ibitarray.cpp  ibytearray.cpp  ibytearraymatcher.cpp  ibytearraymatcher.h  ichar.cpp  idatetime.cpp  iendian.cpp  ifreelist.cpp  ihashfunctions.cpp  ilatin1stringmatcher.cpp  ilocale.cpp  ilocale_data_p.h  ilocale_p.h  ilocale_tools_p.cpp  ilocale_tools_p.h  imemblock.cpp  imemblockq.cpp  imemchunk.cpp  imemtrap.cpp  irect.cpp  iregexp.cpp  iregularexpression.cpp  iringbuffer.cpp  iringbuffer.h  ishareddata.cpp  isharedptr.cpp  isharemem.cpp  isize.cpp  istring.cpp  istringalgorithms_p.h  istringconverter.cpp  istringconverter.h  istringconverter_p.h  istringconverterbase.h  istringiterator_p.h  istringmatcher.cpp  istringmatcher.h  istringview.cpp  (+5 more)
src/inc/: CMakeLists.txt  iinccontext.cpp  iincengine.cpp  iincoperation.cpp  iincstream.cpp
src/inc/kernel/: iincengine.cpp
src/inc/node/: iinccontext.cpp  iincoperation.cpp  iincstream.cpp
src/inc/route/: iincprotocol.cpp
src/ipc/: CMakeLists.txt  iipccontext.cpp  iipcoperation.cpp  iipcstream.cpp
src/multimedia/: CMakeLists.txt  imediaobject.cpp  imediatimerange.cpp  imultimedia.pro  multimedia.pro
src/multimedia/audio/: iaudiobuffer.cpp  iaudioformat.cpp
src/multimedia/control/: imediaplayercontrol.cpp
src/multimedia/playback/: imediaplayer.cpp
src/multimedia/plugins/: imediapluginfactory.cpp  imediapluginfactory.h
src/multimedia/video/: iabstractvideobuffer.cpp  iabstractvideobuffer_p.h  imemoryvideobuffer.cpp  imemoryvideobuffer_p.h  ivideoframe.cpp  ivideosurfaceformat.cpp
test/: CMakeLists.txt  icorelibtest.pro  main.cpp  test.pro  test_iconvertible.cpp  test_inc.cpp  test_iobject.cpp  test_ivariant.cpp  test_player.cpp  test_thread.cpp  test_timer.cpp
test/UT/: CMakeLists.txt  create_simple_tests.sh  run_tests.sh  ut_main.cpp
test/UT/global/: test_global.cpp
test/UT/inc/: test_iincconfig.cpp  test_iinccontext.cpp  test_iinccontext_unit.cpp  test_iincengine.cpp  test_iincerror.cpp  test_iinchandshake_enhanced.cpp  test_iincmessage.cpp  test_iincprotocol.cpp  test_iincprotocol_enhanced.cpp  test_iincrouter.cpp  test_iincserver.cpp  test_iincserver_unit.cpp  test_iinctagstruct.cpp  test_inc_config.cpp  test_inc_integration.cpp  test_inc_reconnection.cpp  test_itcpdevice.cpp  test_iudpclientdevice.cpp
test/UT/io/: test_iiodevice.cpp  test_iiodevice_extended.cpp  test_iiodevice_extended2.cpp  test_ilog.cpp  test_ilog_extended.cpp  test_imcalign.cpp  test_imemblock.cpp  test_imemblock_extended.cpp  test_imemblockq.cpp  test_imemchunk_safe.cpp  test_imemchunk_simple.cpp  test_isharemem.cpp  test_iurl_extended.cpp
test/UT/kernel/: test_icoreapplication.cpp  test_icoreposix.cpp  test_ideadlinetimer.cpp  test_ievent.cpp  test_ieventdispatcher.cpp  test_ieventloop.cpp  test_ieventloop_advanced.cpp  test_ieventsource.cpp  test_iobject_extended.cpp  test_itimer.cpp  test_ivariant.cpp  test_ivariant_extended.cpp  test_iwakeup.cpp
test/UT/multimedia/: test_iaudioformat.cpp  test_imediatimerange.cpp
test/UT/thread/: test_iatomic.cpp  test_icondition.cpp  test_imutex.cpp  test_isemaphore.cpp  test_ithread_advanced.cpp  test_ithread_basic.cpp
test/UT/utils/: test_iarraydata.cpp  test_ibitarray.cpp  test_ibytearray.cpp  test_ibytearray_coverage.cpp  test_ibytearray_extended.cpp  test_ibytearray_helpers.cpp  test_ibytearraymatcher.cpp  test_ichar.cpp  test_ichar_extended.cpp  test_idate.cpp  test_idatetime_extended.cpp  test_ihashfunctions.cpp  test_ilatin1stringmatcher.cpp  test_ilocale.cpp  test_ilocale_extended.cpp  test_ipoint.cpp  test_irect.cpp  test_irect_extended.cpp  test_isize.cpp  (+9 more)
(+193 files in other folders)
